--- a/templates/content/media.html
+++ b/templates/content/media.html
@@ -3,7 +3,7 @@
 {%- block content -%}
 
 <div class="centered">
-    <{{ tag }} style="width: 75%" controls>
+    <{{ tag }} class="big-block" controls>
         <source src="{{ file_link }}" type="{{ mime_type }}">
         <h3 class="text-block">
             This media type is not supported by your browser <br> or by site file display mechanism.
