--- a/templates/errors/error.html
+++ b/templates/errors/error.html
@@ -10,7 +10,7 @@ error {{ error.code }}
     <h3 class="text-block">
         Error {{ error.code }} occured: <br> {{ error.description }}
     </h3>
-    <video autoplay muted loop style="width: 75%">
+    <video autoplay muted loop class="big-block">
         <source src="/static/media/dog_cube.webm" type='video/webm'>
     </video>
 </div>
