--- a/templates/errors/not_found.html
+++ b/templates/errors/not_found.html
@@ -8,7 +8,7 @@
     <h3 class="text-block">
         This page has been moved, deleted, <br> hasn't been completed yet or never existed
     </h3>
-    <video autoplay muted loop style="width: 75%">
+    <video autoplay muted loop class="big-block">
         <source src="/static/media/dog.webm" type='video/webm'>
     </video>
 </div>
