--- a/static/css/extra.css
+++ b/static/css/extra.css
@@ -1,4 +1,4 @@
-body, .button, .copy-tooltip {
+body {
     transition-duration: 0.3s;
     transition-property: color, background, border-color, max-width;
 }
@@ -30,8 +30,8 @@ body, .button, .copy-tooltip {
 }
 
 .copy-button {
-    transition-duration: 0.1s;
-    transition-property: background;
+    transition-duration: 0.2s;
+    transition-property: background, box-shadow;
 }
 
 .copy-tooltip {
@@ -39,13 +39,13 @@ body, .button, .copy-tooltip {
     transition-property: opacity;
 }
 
-@keyframes copy-code {
-    0%, 4% {
+@keyframes copy-tooltip {
+    0%, 10%, 100% {
         content: "Copied";
         font-size: 1em;
     }
 
-    2% {
+    5% {
         font-size: 1.1em;
     }
 }
