add License button

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,8 @@
         {%- endblock -%}
     </article>
     <footer>
-        <div class="text-block">Powered by Flask</div>
-        {{ m.link_button('sliva0', '/about') }}
+        {{ m.link_button('License', '/license') }}
+        {{ m.link_button('Author', '/about') }}
     </footer>
     
     {%- if g.use_js -%} 
