--- a/templates/macros.html
+++ b/templates/macros.html
@@ -110,7 +110,7 @@
 
         <input
             id="body-width-range" class="button" type="range" name="body_width"
-            min="20" max="100" value="{{ g.body_width }}" step="5"
+            min="20" max="100" step="5" value="{{ g.body_width }}"
         >
     </form>
     Max site body width <br>
