--- a/static/css/base.css
+++ b/static/css/base.css
@@ -150,8 +150,25 @@ hr {
     content: attr(data-fb);
 }
 
-.button>.icon[data-fb] {
+.button>.icon[data-fb], .button>.svg-icon {
     margin-right: 0.2rem;
+}
+
+
+
+/* SVG ICONS */
+
+.svg-icon {
+    height: 19px;
+    width: 19px;
+    mask-size: 100%;
+    background: currentColor;
+    -webkit-mask-size: 100%;
+}
+
+.license-icon {
+    mask-image: url(/static/media/license_icon.svg);
+    -webkit-mask-image: url(/static/media/license_icon.svg);
 }
 
 
