add links to another licenses

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -171,6 +171,11 @@ hr {
     -webkit-mask-image: url(/static/media/license_icon.svg);
 }
 
+.github-icon {
+    mask-image: url(/static/media/github_icon.svg);
+    -webkit-mask-image: url(/static/media/github_icon.svg);
+}
+
 
 /* BUTTON */
 
