--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -48,11 +48,11 @@
 }
 
 .icon {
-    font-size: 1.5rem;
+    font-size: 18px;
 }
 
-.button.icon, .button>.icon {
-    font-size: 18px;
+.file-list .icon {
+    font-size: 24px;
 }
 
 .icon[data-icon]::after {
