change one more button to icon

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
         <a class="button" href="/license">
             <span class="svg-icon license-icon"></span> MIT License
         </a>
-        {{ m.link_button('Author', '/about') }}
+        {{ m.icon_link_button("person", 'Author', '/about') }}
     </footer>
     
     {%- if g.use_js -%} 
