--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.3, minimum-scale=0.7 user-scalable=yes">
 
     <meta property="og:title" content="sliva0.tk - {{ self.title() }}">
-    <meta property="og:type" content="article">
-    <meta property="og:image" content="/static/media/favicon.svg">
+    <meta property="og:description" content="{%- block description -%} {%- endblock -%}">
+    <meta property="og:image" content="/static/media/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/themes.css">
