--- a/templates/macros.html
+++ b/templates/macros.html
@@ -115,7 +115,7 @@
         {%- endif -%}
 
         <input
-            id="body-width-range" class="button range" type="range"
+            id="body-width-range" class="button range" type="range" name="body_width"
             min="20" max="100" step="5" value="{{ g.body_width }}"
         >
     </form>
