--- a/templates/base.html
+++ b/templates/base.html
@@ -9,17 +9,16 @@
 
 <head>
     <title> sliva0.tk - {% block title -%} {{ g.rpath.page_name }} {%- endblock -%} </title>
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.3, minimum-scale=0.7 user-scalable=yes">
-
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.3, minimum-scale=0.7 user-scalable=yes">
     <meta property="og:title" content="sliva0.tk - {{ self.title() }}">
-    <meta property="og:description" content="{%- block description -%} {%- endblock -%}">
-    <meta property="og:image" content="/static/media/favicon.png">
+    <meta property="og:description" content="{%- block description -%} Small blog site made by t.me/sliva0 {%- endblock -%}">
+    <meta property="og:image" content="/static/media/preview.png">
 
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/themes.css">
-    <link rel="alternate icon" type="image/png" href="/static/media/favicon.png">
     <link rel="icon" type="image/svg+xml" href="/static/media/favicon.svg">
+    <link rel="alternate icon" type="image/png" href="/static/media/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="/static/css/fonts.css" {{ o('fonts') }}>
     <link rel="stylesheet" type="text/css" href="/static/css/highlight.css" {{ o('use_hl') }}>
